--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
-requests>=2.26.0
+aiohttp>=3.8.1
+asyncio>=3.4.3
 beautifulsoup4>=4.10.0
-PyQt5>=5.15.4
-tqdm>=4.62.3
+PyQt5>=5.15.6
+requests>=2.26.0
